--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- NAVIGATION BAR -->        
         <nav>
-            <img src="patricia-frost-125-edited-medium.jpg" alt="Image of Patricia Frost" />
+            <img src="images/patricia-frost-125-edited-medium.jpg" alt="Image of Patricia Frost" />
             <ul>
                 <li><a href="letter-markup">Letter Markup</a></li>
                 <li><a href="planets-table">Planets Table</a></li>
@@ -63,7 +63,7 @@
 <!-- ASIDE -->
         <aside>
             <figure class="fig-1">
-                <img src="puddle-1-medium.jpg" alt="Puddle image by eosmania">
+                <img src="images/puddle-1-medium.jpg" alt="Puddle image by eosmania">
                 <figcaption>
                     <a href="https://www.flickr.com/photos/eosmaiajohanna/16418452630/">Puddle</a> by 
                     <a href="https://www.flickr.com/photos/eosmaiajohanna/">eosmania</a> licensed under 
@@ -71,7 +71,7 @@
                 </figcaption>
             </figure>
             <figure class="fig-2">
-                <img src="puddle-2-medium.jpg" alt="Puddle image by Markus Loeberbauer">
+                <img src="images/puddle-2-medium.jpg" alt="Puddle image by Markus Loeberbauer">
                 <figcaption>
                     <a href="https://www.flickr.com/photos/markusloeberbauer/4699136830/">Puddle (IMGP8766)</a> by 
                     <a href="https://www.flickr.com/photos/markusloeberbauer/">Markus Loeberbauer</a> licensed under 
