--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -3,8 +3,31 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Kaeble Shults">
+        <meta name="author" content="John Durham">
         <link href="css/style.css" rel="stylesheet" type="text/css">
+        <style>
+            table {
+                width: 100%;
+                border-collapse: collapse;
+            }
+            th, td {
+                border: 1px solid #000;
+                padding: 8px;
+                text-align: center;
+            }
+            th[colspan] {
+                text-align: center;
+            }
+            caption {
+                margin-bottom: 10px;
+            }
+            th[scope=rowgroup] {
+                background-color: #f2f2f2;
+            }
+            th[scope=row] {
+                background-color: #e6e6e6;
+            }
+        </style>
     </head>
     <body>
 
@@ -59,7 +82,7 @@
                 <!-- The fourth child of the table element should be the table body element, which will contain the code and content to display rows of data. -->
                 <tbody>
                     <tr>
-                        <th scope="rowgroup" rowspan="5">Terrestrial planets</th>
+                        <th scope="rowgroup" rowspan="4">Terrestrial planets</th>
                         <th scope="row">Mercury</th>
                         <td>0.330</td>
                         <td>4,879</td>
@@ -70,7 +93,7 @@
                         <td>167</td>
                         <td>0</td>
                         <td>Closest to the Sun</td>
-                        <td><img src="images/mercury.jpg" alt="Mercury"></td>
+                        <td><img src="images/mercury.jpg" alt="Mercury" width="50"></td>
                     </tr>
                     <tr>
                         <th scope="row">Venus</th>
@@ -83,7 +106,7 @@
                         <td>464</td>
                         <td>0</td>
                         <td></td>
-                        <td><img src="images/venus.jpg" alt="Venus"></td>
+                        <td><img src="images/venus.jpg" alt="Venus" width="50"></td>
                     </tr>
                     <tr>
                         <th scope="row">Earth</th>
@@ -96,7 +119,7 @@
                         <td>15</td>
                         <td>1</td>
                         <td>Our world</td>
-                        <td><img src="images/earth.jpg" alt="Earth"></td>
+                        <td><img src="images/earth.jpg" alt="Earth" width="50"></td>
                     </tr>
                     <tr>
                         <th scope="row">Mars</th>
@@ -109,13 +132,13 @@
                         <td>-65</td>
                         <td>2</td>
                         <td>The red planet</td>
-                        <td><img src="images/mars.jpg" alt="Mars"></td>
+                        <td><img src="images/mars.jpg" alt="Mars" width="50"></td>
                     </tr>
                     <tr>
-                        <th scope="rowgroup" colspan="11">Jovian planets</th>
+                        <th scope="rowgroup" colspan="12">Jovian planets</th>
                     </tr>
                     <tr>
-                        <th scope="rowgroup" rowspan="3">Gas giants</th>
+                        <th scope="rowgroup" rowspan="2">Gas giants</th>
                         <th scope="row">Jupiter</th>
                         <td>1898</td>
                         <td>142,984</td>
@@ -126,7 +149,7 @@
                         <td>-110</td>
                         <td>67</td>
                         <td>The largest planet</td>
-                        <td><img src="images/jupiter.jpg" alt="Jupiter"></td>
+                        <td><img src="images/jupiter.jpg" alt="Jupiter" width="50"></td>
                     </tr>
                     <tr>
                         <th scope="row">Saturn</th>
@@ -139,7 +162,7 @@
                         <td>-140</td>
                         <td>62</td>
                         <td></td>
-                        <td><img src="images/saturn.jpg" alt="Saturn"></td>
+                        <td><img src="images/saturn.jpg" alt="Saturn" width="50"></td>
                     </tr>
                     <tr>
                         <th scope="rowgroup" rowspan="2">Ice giants</th>
@@ -153,7 +176,7 @@
                         <td>-195</td>
                         <td>27</td>
                         <td></td>
-                        <td><img src="images/uranus.jpg" alt="Uranus"></td>
+                        <td><img src="images/uranus.jpg" alt="Uranus" width="50"></td>
                     </tr>
                     <tr>
                         <th scope="row">Neptune</th>
@@ -166,7 +189,7 @@
                         <td>-200</td>
                         <td>14</td>
                         <td></td>
-                        <td><img src="images/neptune.jpg" alt="Neptune"></td>
+                        <td><img src="images/neptune.jpg" alt="Neptune" width="50"></td>
                     </tr>
                     <tr>
                         <th scope="rowgroup" rowspan="1">Dwarf planets</th>
@@ -179,11 +202,4 @@
                         <td>5906.4</td>
                         <td>-225</td>
                         <td>5</td>
-                        <td>Declassified as a planet in 2006, but this remains <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank">controversial</a>.</td>
-                        <td><img src="images/pluto.jpg" alt="Pluto"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </main>
-    </body>
-</html>
+                        <td>Declassified as a planet in 2006, but this remains <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank
