--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="John Durham">
+        <meta name="author" content="Kaeble Shults">
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <style>
             table {
@@ -47,7 +47,7 @@
                 
                 <!-- The second child of the table element should be the colgroup element, which also contains several col elements, and helps define the purpose of the table columns. -->
                 <colgroup>
-                    <col title="Category" span="2">
+                    <col title="Category">
                     <col title="Name">
                     <col title="Mass">
                     <col title="Diameter">
@@ -64,7 +64,6 @@
                 <!-- The table head element should be the third child of the table element; it will wrap the code and content to define a row of column headers. -->
                 <thead>
                     <tr>
-                        <th scope="col" colspan="2">Category</th>
                         <th scope="col">Name</th>
                         <th scope="col">Mass (10<sup>24</sup>kg)</th>
                         <th scope="col">Diameter (km)</th>
@@ -202,4 +201,4 @@
                         <td>5906.4</td>
                         <td>-225</td>
                         <td>5</td>
-                        <td>Declassified as a planet in 2006, but this remains <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank
+                        <td>Declassified as a planet in 2006, but this remains <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank">controversial
