--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -64,6 +64,7 @@
                 <!-- The table head element should be the third child of the table element; it will wrap the code and content to define a row of column headers. -->
                 <thead>
                     <tr>
+                        <th scope="col"></th>
                         <th scope="col">Name</th>
                         <th scope="col">Mass (10<sup>24</sup>kg)</th>
                         <th scope="col">Diameter (km)</th>
@@ -201,4 +202,11 @@
                         <td>5906.4</td>
                         <td>-225</td>
                         <td>5</td>
-                        <td>Declassified as a planet in 2006, but this remains <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank">controversial
+                        <td>Declassified as a planet in 2006, but this remains <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank">controversial</a>.</td>
+                        <td><img src="images/pluto.jpg" alt="Pluto" width="50"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </main>
+    </body>
+</html>
