--- a/wanted-poster/index.html
+++ b/wanted-poster/index.html
@@ -1,126 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Kaeble Shults">
-        <title>Wanted | Jame Markus</title>
-        <style>
-            /* General Styles */
-            body {
-                font-family: Arial, sans-serif;
-                margin: 0;
-                padding: 0;
-                background: #f0f0f0;
-            }
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Kaeble Shults">
+    <title>Wanted | Jame Markus</title>
+    <style>
+        /* General Styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 2rem;
+            background: #f0f0f0;
+        }
 
-            /* Headings */
-            h1, h2, h3, h4 {
-                text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-                color: #c00;
-                font-family: 'Arial Black', Gadget, sans-serif;
-                margin: 1rem 0;
-                text-align: center;
-                text-transform: uppercase;
-            }
+        /* Headings */
+        h1, h2, h3, h4 {
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+            color: #c00;
+            font-family: 'Arial Black', Gadget, sans-serif;
+            margin: 1rem 0;
+            text-align: center;
+            text-transform: uppercase;
+        }
 
-            h2 {
-                font-size: 3rem;
-                letter-spacing: 0.25rem;
-                font-weight: normal;
-            }
+        h2 {
+            font-size: 3rem;
+            letter-spacing: 0.25rem;
+            font-weight: normal;
+        }
 
-            h3 {
-                font-size: 2rem;
-                color: black;
-                font-weight: normal;
-            }
+        h3 {
+            font-size: 2rem;
+            color: black;
+            font-weight: normal;
+        }
 
-            h4 {
-                font-size: 1.5rem;
-                letter-spacing: 0.25rem;
-                padding-bottom: 1.125rem;
-                font-weight: normal;
-            }
+        h4 {
+            font-size: 1.5rem;
+            letter-spacing: 0.25rem;
+            padding-bottom: 1.125rem;
+            font-weight: normal;
+        }
 
-            /* Additional styles for span elements within h4 */
-            h4 > span {
-                padding: 0 0.5rem;
-            }
+        /* Additional styles for span elements within h4 */
+        h4 > span {
+            padding: 0 0.5rem;
+        }
 
-            h5 {
-                font-size: 1rem;
-                margin-top: 0.25rem;
-                padding: 0.5rem;
-                background-color: #333;
-                color: #FFF;
-                font-weight: normal;
-                text-align: center;
-            }
+        h5 {
+            font-size: 1rem;
+            margin-top: 0.25rem;
+            padding: 0.5rem;
+            background-color: #333;
+            color: #FFF;
+            font-weight: normal;
+            text-align: center;
+        }
 
-            /* Sections and Paragraphs */
-            section {
-                margin-top: 0.5rem;
-            }
+        /* Sections and Paragraphs */
+        section {
+            margin-top: 0.5rem;
+        }
 
-            p {
-                margin: 1rem auto;
-                padding: 0 1rem;
-                width: 90%;
-                text-align: left;
-            }
+        p {
+            margin: 1rem auto;
+            padding: 0 1rem;
+            width: 90%;
+            text-align: left;
+        }
 
-            /* Figure and Image */
-            figure {
-                margin-bottom: 2rem;
-            }
+        /* Figure and Image */
+        figure {
+            margin-bottom: 2rem;
+        }
 
-            figcaption {
-                padding-top: 0.5rem;
-                text-align: right;
-            }
+        figcaption {
+            padding-top: 0.5rem;
+            text-align: right;
+        }
 
-            img {
-                width: 100%;
-                margin: 0 auto;
-                max-width: 50rem;
-            }
+        img {
+            width: 100%;
+            margin: 0 auto;
+            max-width: 50rem;
+        }
 
-            /* Footer */
-            footer {
-                padding: 1rem;
-                border-top: 2rem solid #333;
-            }
-        </style>
-    </head>
-    <body>
-        <main>
-            <header>
-                <h1>Wanted!</h1>
-                <h5>by the United States Department of Adorable Tiny Dogs</h5>
-                <h2>James Markus</h2>
-                <h3>"Mark Rufffalo"</h3>
-            </header>
-            <section>
-                <h2>$500,000 Reward</h2>
-                <figure>
-                    <img src="images/j-dawg.jpg" alt="cute dog mug shot">
-                    <figcaption>
-                        <a href="https://www.flickr.com/photos/christopherf/12476805405/sizes/h/">"J-Dawg"</a> by 
-                        <a href="https://www.flickr.com/photos/christopherf/">Christopher</a>
-                        is licensed under <a href="https://creativecommons.org/licenses/by-sa/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-ND 2.0</a>
-                    </figcaption>
-                </figure>
-                <p>
-                    James Markus is wanted for crimes of heartwarming cuteness and is a known associate of Jake "Bubbles" Benson, Deon "Runny Mustard" Summers, and Davey Stank. James is considered armed and dangerous.
-                </p>
-            </section>
-            <section>
-                <h4><span>&#10036;</span>Approach with extreme caution!<span>&#10036;</span></h4>
-            </section>
-            <footer>
-                <p>The <a href="https://www.usdatd.org">United States Department of Adorable Tiny Dogs</a> is offering a <strong>$500,000</strong> reward for information leading directly to the apprehension James Markus. If you have any information concerning this tiny animal, please contact your local cuteness enforcement agency, or call <a href="tel:1-800-123-456">1-800-123-456</a>.</p>
-            </footer>
-        </main>
-    </body>
+        /* Footer */
+        footer {
+            padding: 1rem;
+            border-top: 2rem solid #333;
+        }
+
+        /* Additional Styles for header */
+        header {
+            background-color: #FFF;
+            border-bottom: 2px solid #000;
+            padding: 1rem;
+        }
+
+        /* Add background and padding to sections */
+        section {
+            background-color: #FFF;
+            padding: 1rem;
+        }
+
+        /* Styling for the main container */
+        main {
+            background: url('images/wrinkled-white-paper-background.png') no-repeat center center fixed;
+            background-size: cover;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            margin: 2rem auto;
+            max-width: 800px;
+            padding: 2rem;
+        }
+    </style>
+</head>
+<body>
+    <main>
+        <header>
+            <h1>Wanted!</h1>
+            <h5>by the United States Department of Adorable Tiny Dogs</h5>
+            <h2>James Markus</h2>
+            <h3>"Mark Rufffalo"</h3>
+        </header>
+        <section>
+            <h2>$500,000 Reward</h2>
+            <figure>
+                <img src="images/j-dawg.jpg" alt="cute dog mug shot">
+                <figcaption>
+                    <a href="https://www.flickr.com/photos/christopherf/12476805405/sizes/h/">"J-Dawg"</a> by 
+                    <a href="https://www.flickr.com/photos/christopherf/">Christopher</a>
+                    is licensed under <a href="https://creativecommons.org/licenses/by-sa/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-ND 2.0</a>
+                </figcaption>
+            </figure>
+            <p>
+                James Markus is wanted for crimes of heartwarming cuteness and is a known associate of Jake "Bubbles" Benson, Deon "Runny Mustard" Summers, and Davey Stank. James is considered armed and dangerous.
+            </p>
+        </section>
+        <section>
+            <h4><span>&#10036;</span>Approach with extreme caution!<span>&#10036;</span></h4>
+        </section>
+        <footer>
+            <p>The <a href="https://www.usdatd.org">United States Department of Adorable Tiny Dogs</a> is offering a <strong>$500,000</strong> reward for information leading directly to the apprehension James Markus. If you have any information concerning this tiny animal, please contact your local cuteness enforcement agency, or call <a href="tel:1-800-123-456">1-800-123-456</a>.</p>
+        </footer>
+    </main>
+</body>
 </html>
