--- a/wanted-poster/index.html
+++ b/wanted-poster/index.html
@@ -107,7 +107,7 @@
 
         /* Styling for the main container */
         main {
-            background: url('images/wrinkled-white-paper-background') no-repeat center center fixed;
+            background: url('images/wrinkled-white-paper-background.jpg') no-repeat center center fixed;
             background-size: cover;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             margin: 2rem auto;
