--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -6,34 +6,72 @@
         <meta name="author" content="Kaeble Shults">
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <style>
+            body {
+                font-family: Arial, sans-serif;
+                line-height: 1.6;
+                color: #333;
+            }
+
             table {
                 width: 100%;
                 border-collapse: collapse;
+                margin: 20px 0;
             }
+
             th, td {
-                border: 1px solid #000;
+                border: 1px solid #ddd;
                 padding: 8px;
                 text-align: center;
             }
+
+            th {
+                background-color: #f8f8f8;
+            }
+
             th[colspan] {
                 text-align: center;
+                font-weight: bold;
             }
+
+            th[scope=rowgroup] {
+                background-color: #e8e8e8;
+                font-weight: bold;
+                text-align: left;
+                padding-left: 12px;
+            }
+
+            th[scope=row] {
+                background-color: #f2f2f2;
+                font-weight: normal;
+            }
+
             caption {
                 margin-bottom: 10px;
+                font-weight: bold;
             }
-            th[scope=rowgroup] {
-                background-color: #f2f2f2;
+
+            a {
+                color: #0066cc;
+                text-decoration: none;
             }
-            th[scope=row] {
-                background-color: #e6e6e6;
+
+            a:hover {
+                text-decoration: underline;
             }
+
+            img {
+                border-radius: 4px;
+                width: 50px;
+                height: auto;
+            }
+
         </style>
     </head>
     <body>
 
         <!-- Wrap the top-level heading in a header element -->
         <header>
-            <h1>Planets Data</h1>
+            <h1 style="text-align: center;">Planets Data</h1>
         </header>
         
         <!-- Add a main element to contain the table -->
@@ -93,7 +131,7 @@
                         <td>167</td>
                         <td>0</td>
                         <td>Closest to the Sun</td>
-                        <td><img src="images/mercury.jpg" alt="Mercury" width="50"></td>
+                        <td><img src="images/mercury.jpg" alt="Mercury"></td>
                     </tr>
                     <tr>
                         <th scope="row">Venus</th>
@@ -106,7 +144,7 @@
                         <td>464</td>
                         <td>0</td>
                         <td></td>
-                        <td><img src="images/venus.jpg" alt="Venus" width="50"></td>
+                        <td><img src="images/venus.jpg" alt="Venus"></td>
                     </tr>
                     <tr>
                         <th scope="row">Earth</th>
@@ -119,7 +157,7 @@
                         <td>15</td>
                         <td>1</td>
                         <td>Our world</td>
-                        <td><img src="images/earth.jpg" alt="Earth" width="50"></td>
+                        <td><img src="images/earth.jpg" alt="Earth"></td>
                     </tr>
                     <tr>
                         <th scope="row">Mars</th>
@@ -132,7 +170,7 @@
                         <td>-65</td>
                         <td>2</td>
                         <td>The red planet</td>
-                        <td><img src="images/mars.jpg" alt="Mars" width="50"></td>
+                        <td><img src="images/mars.jpg" alt="Mars"></td>
                     </tr>
                     <tr>
                         <th scope="rowgroup" colspan="12">Jovian planets</th>
@@ -149,7 +187,7 @@
                         <td>-110</td>
                         <td>67</td>
                         <td>The largest planet</td>
-                        <td><img src="images/jupiter.jpg" alt="Jupiter" width="50"></td>
+                        <td><img src="images/jupiter.jpg" alt="Jupiter"></td>
                     </tr>
                     <tr>
                         <th scope="row">Saturn</th>
@@ -162,7 +200,7 @@
                         <td>-140</td>
                         <td>62</td>
                         <td></td>
-                        <td><img src="images/saturn.jpg" alt="Saturn" width="50"></td>
+                        <td><img src="images/saturn.jpg" alt="Saturn"></td>
                     </tr>
                     <tr>
                         <th scope="rowgroup" rowspan="2">Ice giants</th>
@@ -176,7 +214,7 @@
                         <td>-195</td>
                         <td>27</td>
                         <td></td>
-                        <td><img src="images/uranus.jpg" alt="Uranus" width="50"></td>
+                        <td><img src="images/uranus.jpg" alt="Uranus"></td>
                     </tr>
                     <tr>
                         <th scope="row">Neptune</th>
@@ -189,7 +227,7 @@
                         <td>-200</td>
                         <td>14</td>
                         <td></td>
-                        <td><img src="images/neptune.jpg" alt="Neptune" width="50"></td>
+                        <td><img src="images/neptune.jpg" alt="Neptune"></td>
                     </tr>
                     <tr>
                         <th scope="rowgroup" rowspan="1">Dwarf planets</th>
@@ -203,7 +241,7 @@
                         <td>-225</td>
                         <td>5</td>
                         <td>Declassified as a planet in 2006, but this remains <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank">controversial</a>.</td>
-                        <td><img src="images/pluto.jpg" alt="Pluto" width="50"></td>
+                        <td><img src="images/pluto.jpg" alt="Pluto"></td>
                     </tr>
                 </tbody>
             </table>
