--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -71,7 +71,7 @@
 
         <!-- Wrap the top-level heading in a header element -->
         <header>
-            <h1 style="text-align: center;">Planets Data</h1>
+            <h1 style="text-align: left;">Planets Data</h1>
         </header>
         
         <!-- Add a main element to contain the table -->
